# oneDirectionCore

./: .gitignore  Index.html  README.md  build_output.txt  errors.txt  meson.build  settings_dotnet.cfg
core/driver/: capture_windows.h  capture_windows_ext.c
ui/dotnet/OneDirectionCore/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  OneDirectionCore.csproj  OverlayWindow.xaml  OverlayWindow.xaml.cs  build_output.txt  errors_only.txt  settings_dotnet.cfg
winInstaller/: installer.iss  settings_dotnet.cfg
